[package]
name = "FeatureReportGenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.39.2", features = ["lazy", "temporal", "dtype-date64"] }
rayon = "1.5"
tokio = { version = "1.0", features = ["full"] }
calyx = "0.7.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
csv = "1.1"

[lib]
name = "utils"
path = "src/lib.rs"