[package]
name = "FeatureReportGenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.39.2"
rayon = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
csv = "1.1"
ndarray = "0.15"
thiserror = "1.0"
rand = "0.8"
xlsxwriter = "0.6.0"
clap = {version = "4.5.4", features = ["derive"]}

[lib]
name = "utils"
path = "src/lib.rs"